Adding new files and refactor for categoryComboId
Signed-off-by: Navneet <navneet@ifi.uio.no>

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -5,7 +5,8 @@
 
   <ul class="nav nav-pills nav-stacked">
   <!-- <li role="presentation" class="active"><a href="#/edit">Service administration</a></li> -->
-  <li role="presentation" ><a href="#/edit">Service administration</a></li>
+  <li role="presentation" ><a href="#/edit">Quantity administration</a></li>
+  <li role="presentation" ><a href="#/qualityAdmin">Quality administration</a></li>
   <li role="presentation"><a href="#">RBF Data Entry</a></li>
   <li role="presentation"><a href="#">Tariff Management</a></li>
   <li role="presentation"><a href="#">Bank Account Management</a></li>
