--- a/src/dataEntry/dataEntry.html
+++ b/src/dataEntry/dataEntry.html
@@ -1,6 +1,4 @@
 <div>
-<a ng-href="#/edit"> Service administration</a>
+<a ng-href="#/edit"> Quantity administration</a>
 <a ng-href="#/dataEntry"> RBF Data Entry</a>
-
-
 </div>
