With syntax error fix
Signed-off-by: Navneet <navneet@ifi.uio.no>

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <script src="app.js"></script>
     <script src="app/app.controller.js"></script>
     <script src="edit/edit.controller.js"></script>
+    <script src="qualityAdmin/quality.controller.js"></script>
     <script src="dashboard/dashboard.controller.js"></script>
     <!-- endbuild -->
 </body>
