--- a/src/dataEntry/dataEntry.html
+++ b/src/dataEntry/dataEntry.html
@@ -6,7 +6,7 @@
 	<table>
         <thead>
             <tr>
-                <th colspan="2">$i18n.getString( "organisation_unit_selection_tree" )
+                <th colspan="2">Organization Unit Selection
                     <select id="treeSelectedId" name="treeSelectedId" #if( $required ) class="{validate:{required:true}}" #end multiple="multiple" style="display:none"/>
                 </th>
             </tr>
@@ -16,14 +16,14 @@
                 <td>
                     <div style="width:100%">
                         <div id="selectionTreeContainer" style="display:none;">
-                            <input type="button" value="$i18n.getString( 'select_at_level' )" onclick="selectOrganisationUnitAtLevel()" style="width:10em"/>
+                            <input type="button" value=" select_at_level" onclick="selectOrganisationUnitAtLevel()" style="width:10em"/>
                             <select id="levelList" name="levelList" style="width:10em"/>
-                            <input type="button" value="$i18n.getString( 'unselect_at_level' )" onclick="unSelectOrganisationUnitAtLevel()" style="width:10em"/>
-                            <input type="button" value="$i18n.getString( 'unselect_all' )" onclick="unSelectAllTree()" style="width:10em"/><br>
-                            <input type="button" value="$i18n.getString( 'select_in_group' )" onclick="selectOrganisationUnitByGroup()" style="width:10em">
+                            <input type="button" value="unselect_at_level" onclick="unSelectOrganisationUnitAtLevel()" style="width:10em"/>
+                            <input type="button" value="unselect_all" onclick="unSelectAllTree()" style="width:10em"/><br>
+                            <input type="button" value="elect_in_group" onclick="selectOrganisationUnitByGroup()" style="width:10em">
                             <select id="groupList" name="groupList" style="width:10em"/>
-                            <input type="button" value="$i18n.getString( 'unselect_in_group' )" onclick="unSelectOrganisationUnitByGroup()" style="width:10em"> 
-                            <input type="button" value="$i18n.getString( 'select_children' )" onclick="selectChildren()" style="width:10em"/>   
+                            <input type="button" value="unselect_in_group" onclick="unSelectOrganisationUnitByGroup()" style="width:10em"> 
+                            <input type="button" value="select_children" onclick="selectChildren()" style="width:10em"/>   
                             <div id="selectionTree"></div>
                         </div>
                     </div>
