--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <!-- endbuild -->
 
     <script type="text/javascript" src="../../dhis-web-commons/oust/oust.js"></script>
+     <script type="text/javascript" src="../../dhis-web-commons/javascripts/commons.js"></script>
     <!--<script type="text/javascript" src="../../dhis-web-commons/oust/selectionTreeSelect.js"></script>-->
     <script type="text/javascript">
 
