tariff managment feature

--- a/src/dataEntry/dataEntry.html
+++ b/src/dataEntry/dataEntry.html
@@ -39,7 +39,7 @@
     			<td> Org Unit Group Name <input type="text" placeholder="OUGN" title="Group name" ng-model="setUGName" ng-model-options="{ getterSetter: true }">  
     			Short Name <input type="text" placeholder="OUSN" title="Group name (Short) "ng-model="setUGSName" ng-model-options="{ getterSetter: true }"> 
     			<button class="btn btn-primary" type="button" title="Add" ng-click="dataEntryCtrl.add()"> Add </button>  </td>
-            	<pre>Par1 = <span ng-bind="setUGName()"></span>, <span ng-bind="setUGSName()"></span></pre>
+            	<!-- <pre>Par1 = <span ng-bind="setUGName()"></span>, <span ng-bind="setUGSName()"></span></pre> -->
   			</form>
             </tr>
         </tbody>
