--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
     <script src="edit/edit.controller.js"></script>
     <script src="qualityAdmin/quality.controller.js"></script>
     <script src="dashboard/dashboard.controller.js"></script>
-    <script src="dataEntry/dataEntry.controller.js"></script>
+    <script src="tariffManagement/tariffManagement.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
