--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -7,8 +7,8 @@
   <!-- <li role="presentation" class="active"><a href="#/edit">Service administration</a></li> -->
   <li role="presentation" ><a href="#/edit">Quantity administration</a></li>
   <li role="presentation" ><a href="#/qualityAdmin">Quality administration</a></li>
-  <li role="presentation"><a href="#/dataEntry">RBF Data Entry</a></li>
-  <li role="presentation"><a href="#">Tariff Management</a></li>
+  <li role="presentation"><a href="#/">RBF Data Entry</a></li>
+  <li role="presentation"><a href="#/tariffManagement">Tariff Management</a></li>
   <li role="presentation"><a href="#">Bank Account Management</a></li>
 
 </ul>
